--- a/jgclark.DashboardReact/src/react/css/SettingsDialog.css
+++ b/jgclark.DashboardReact/src/react/css/SettingsDialog.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    background-color: var(--bg-alt-color);
+    background-color: var(--bg-mid-color);
     padding: 20px;
     border-radius: 8px;
     overflow-y: auto;
@@ -12,18 +12,20 @@
 
 /* Style for the settings dialog */
 .settings-dialog {
+    font-family: system-ui;
+    /* background-color: var(--bg-main-color); */
+    background-color: var(--bg-mid-color);
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 80%;
     max-width: 600px;
-    background-color: white;
     border: none;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     z-index: 1000;
     opacity: 0;
-    transition: opacity 0.3s ease-out;
+    transition: opacity 0.2s ease-out;
     overflow: hidden;
 }
 
@@ -34,15 +36,16 @@
 
 /* Style for the dialog buttons container */
 .settings-dialog-buttons {
+    background-color: var(--bg-alt-color);
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px;
+    padding: 0.3rem;
     border-bottom: 1px solid #ddd;
     position: relative;
     /* Needed to center the header */
-    height: 40px;
     /* Adjusted height for better visibility */
+    /* height: 40px; */
 }
 
 /* Style for the centered header */
@@ -60,14 +63,14 @@
 
 /* Style for the buttons */
 .settings-dialog .PCButton {
+    font-family: system-ui;
     padding: 6px 12px;
-    /* Reduce height to 75% */
     border: none;
     border-radius: 4px;
     cursor: pointer;
     font-size: 14px;
-    transition: background-color 0.3s, box-shadow 0.3s;
-    height: 30px;
+    transition: background-color 0.2s, box-shadow 0.2s;
+    /* height: 30px; */
     /* Set height to 75% of the container height */
     align-self: center;
     /* Ensure buttons are centered vertically */
@@ -75,32 +78,36 @@
 
 /* Style for the Cancel button */
 .settings-dialog .cancel-button {
-    background-color: white;
-    color: black;
+    background-color: var(--bg-main-color);
+    color: var(--fg-main-color);
     border: 1px solid #ddd;
 }
 
 /* Hover style for the Cancel button */
 .settings-dialog .cancel-button:hover {
-    background-color: #f1f1f1;
+    /* background-color: #f1f1f1; */
+    /* following is a bit of a hack from https://stackoverflow.com/a/31005080/3238281 */
+    box-shadow: inset 0 0 0 50px rgba(0, 0, 0, 0.2);
 }
 
 /* Style for the Save & Close button */
 .settings-dialog .save-button {
     background-color: var(--tint-color);
-    color: white;
+    color: var(--bg-main-color);
 }
 
 /* Hover style for the Save & Close button */
 .settings-dialog .save-button:hover {
-    background-color: var(--bg-alt-color);
+    /* background-color: var(--bg-alt-color); */
+    /* following is a bit of a hack from https://stackoverflow.com/a/31005080/3238281 */
+    box-shadow: inset 0 0 0 50px rgba(0, 0, 0, 0.2);
 }
 
 /* Style for switch-line */
 .settings-dialog .switch-line {
     display: flex;
     align-items: center;
-    gap: 0.3rem;
+    gap: 0.2rem;
     justify-content: flex-start;
     /* Left justify */
 }
@@ -112,7 +119,7 @@
 
 /* Style for switch-label */
 .settings-dialog .switch-label {
-    font-weight: 600;
+    font-weight: 500;
     color: var(--fg-alt-color);
     flex-shrink: 0;
 }
@@ -126,32 +133,36 @@
 
 /* Style for input-box-label */
 .settings-dialog .input-box-label {
-    margin-bottom: 5px;
-    font-weight: 600;
+    font-weight: 500;
     color: var(--fg-alt-color);
+    margin-bottom: 0.3rem;
 }
 
 /* Style for input-box-wrapper */
 .settings-dialog .input-box-wrapper {
     display: flex;
     align-items: center;
-    gap: 10px;
+    /* gap: 10px; */
 }
 
 /* Style for input-box-input */
 .settings-dialog .input-box-input {
     flex: 1;
-    padding: 8px 12px;
-    border: 1px solid #ddd;
+    padding: 4px 8px;
+    /* border: 1px solid #ddd; */
+    border: 0.5px solid rgb(from var(--fg-main-color) r g b / 0.3);
+    background-color: var(--bg-main-color);
     border-radius: 4px;
+    font-family: system-ui;
     font-size: 14px;
 }
 
 /* Focus style for input-box-input */
 .settings-dialog .input-box-input:focus {
-    border-color: #007BFF;
+    /* border-color: #007BFF; */
+    border-color: var(--hashtag-color);
     outline: none;
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    box-shadow: 0 0 3px var(--hashtag-color);
 }
 
 /* Style for input-box-save */
@@ -190,12 +201,12 @@
 .settings-dialog .combobox-container {
     display: flex;
     flex-direction: column;
-    width: 98%;
+    /* width: 98%; */
 }
 
 /* Style for combobox-label */
 .settings-dialog .combobox-label {
-    margin-bottom: 5px;
+    margin-bottom: 0.3rem;
     font-weight: bold;
     color: var(--fg-alt-color);
 }
@@ -211,9 +222,11 @@
 /* Style for combobox-input */
 .settings-dialog .combobox-input {
     flex: 1;
-    padding: 8px 12px;
-    border: 1px solid #ddd;
+    padding: 4px 8px;
+    background-color: var(--bg-main-color);
+    border: 0.5px solid rgb(from var(--fg-main-color) r g b / 0.3);
     border-radius: 4px;
+    font-family: system-ui;
     font-size: 14px;
     width: 100%;
     box-sizing: border-box;
@@ -221,9 +234,9 @@
 
 /* Focus style for combobox-input */
 .settings-dialog .combobox-input:focus {
-    border-color: #007BFF;
+    border-color: var(--hashtag-color);
     outline: none;
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    box-shadow: 0 0 3px var(--hashtag-color);
 }
 
 /* Style for combobox-arrow */
@@ -231,8 +244,8 @@
     position: absolute;
     right: 10px;
     pointer-events: none;
-    font-size: 12px;
-    color: var(--tint-color);
+    font-size: 14px;
+    /* color: var(--tint-color); */
 }
 
 /* Style for combobox-dropdown */
@@ -253,7 +266,7 @@
     padding: 8px 12px;
     cursor: pointer;
     color: var(--fg-main-color);
-    transition: background-color 0.3s;
+    transition: background-color 0.2s;
 }
 
 /* Hover style for combobox option */
@@ -264,11 +277,11 @@
 
 /* Heading style for settings dialog */
 .settings-dialog-heading {
-    font-size: larger;
+    font-size: large;
     font-weight: 500;
     color: var(--tint-color);
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 0.3rem;
+    padding-bottom: 0.2rem;
 }
 
 /* Header style for settings dialog */
@@ -286,18 +299,19 @@
 .settings-dialog .item-description {
     font-size: small;
     color: var(--fg-alt-color);
-    margin-top: 5px;
+    margin-top: 0.3rem;
     opacity: 0.8;
 }
 
 .settings-dialog .ui-heading {
     font-size: larger;
     color: var(--tint-color);
-    padding-bottom: 10px;
+    padding-bottom: 0.2rem;
     font-weight: 600;
     text-align: center;
 }
 
 .settings-dialog hr {
-    color: var(--tint-color);
+    color: var(--fg-alt-color);
+    border-width: 0.3px;
 }
