--- a/jgclark.DashboardReact/src/react/css/DropdownMenu.css
+++ b/jgclark.DashboardReact/src/react/css/DropdownMenu.css
@@ -35,14 +35,31 @@
 }
 
 /* Show the dropdown content when the menu is open */
-.dropdown-content.show {
+.dropdown-content.show, .dropdown-content.show-in-columns {
   display: block;
   width: max-content;
   right: -1rem;
-  animation: unfurl 0.3s ease-out forwards, showScrollbar 0s 0.3s forwards;
+  animation: unfurl 0.2s ease-out forwards, showScrollbar 0s 0.2s forwards;
   opacity: 1;
   padding: 15px;
 }
+
+/* Show the dropdown content to be shown in 2 simple cols when the menu is open */
+/* FIXME: isn't currently working, so for now defined the same as the simpler case above */
+/* .dropdown-content.show-in-columns {
+  display: block;
+  column-count: 2;
+	column-fill: balance;
+	column-width: auto;
+	column-rule: 1px dotted var(--tint-color);
+	align-items: center;
+	column-gap: 1rem;
+  min-width: max-content;
+  max-width: 80%;
+  right: -0.5rem;
+  animation: unfurl 0.2s ease-out forwards, showScrollbar 0s 0.2s forwards;
+  opacity: 1;
+} */
 
 /* Flex container to align dropdowns */
 #dropdowns {
