--- a/jgclark.DashboardReact/src/react/css/dashboardDialog.css
+++ b/jgclark.DashboardReact/src/react/css/dashboardDialog.css
@@ -1,17 +1,7 @@
 /**
   CSS for the items Actions Dialog 
-  Last updated: 5.5.2024 for v2.0.0 by @jgclark
+  Last updated: 2.7.2024 for v2.0.0-b17 by @jgclark
   */
-dialog:modal {
-  max-width: 92%;
-}
-
-/* @media screen and (width <= 420px) {
-  dialog:modal {
-    max-width: 90%;
-    left: 5%;
-  }
-} */
 
 dialog {
   /* Unset the margin around it, to allow absolute positioning by left/top */
@@ -27,15 +17,20 @@ dialog {
   max-width: 98%;
 }
 
+dialog:modal {
+  max-width: 92%;
+}
+
 .dialogTitle {
   display: grid;
-  background: var(--bg-sidebar-color);
-  padding-block-start: 0.6rem;
-  padding-inline-start: 0.5rem;
+  background: var(--bg-alt-color);
+  padding-block-start: 0.4rem;
+  padding-inline-start: 0.6rem;
   padding-inline-end: 0.5rem;
   padding-block-end: 0.2rem;
   border-block-end: 1px solid var(--divider-color);
   /* margin-block-end: 4px; */
+  border-radius: 0.5rem 0.5rem 0px 0px; /* mimic the dialog border radius only at the top */
   grid-template-columns: auto auto;
   /* vertically align content items in center */
   align-items: center; 
@@ -71,10 +66,12 @@ dialog {
   align-items: center; 
 }
 
-.buttonGrid div:nth-child(odd) {
-  align-self: self-start;
-  padding-block-start: 5px;
+/* Tweak the first column labels */
+.buttonGrid div.preText {
+  align-self: center; /* self-start; */
+  /* padding-block-start: 5px; */
   justify-self: end;
+  margin-top: 2px;
 }
 
 /* Put very last div (Close button) on RHS -- no longer used */
@@ -82,10 +79,10 @@ dialog {
   justify-self: end;
 } */
 
-.buttonGrid div:nth-child(1) {
+/* .buttonGrid div:nth-child(1) { */
   /* Put very first div down a bit to try to align with input field */
-  padding-block-start: 6px;
-}
+  /* padding-block-start: 6px; */
+/* } */
 
 /* for Dialog main buttons: a little more pronounced */
 .mainButton {
@@ -104,8 +101,9 @@ dialog {
   /* border: 1px solid rgb(from var(--fg-main-color) r g b / 0.7); */
   border: 1px solid var(--divider-color);
   border-radius: 4px;
-  padding: 1px 4px 1px 4px;
-  margin: 3px 2px;
+  padding: 1px 4px 0px 4px;
+  /* have margin to the right+top+bottom of buttons */
+  margin: 3px 4px 3px 0px;
 }
 
 .itemActionsDialog {
@@ -114,9 +112,10 @@ dialog {
 
 .fullTextInput {
   width: calc(100% - 6rem); /* allow space for icon before and button after */
-  font-size: 0.85rem;
+  font-size: 0.9rem;
   font-weight: 600;
   padding: 1px 4px 1px 4px;
+  border: 1px solid var(--divider-color);
   border-radius: 4px;
   margin-left: 0.3rem;
   margin-right: 0.3rem;
@@ -143,7 +142,32 @@ dialog {
   pointer-events: none; /* Prevent placeholder text from being selectable */
 }
 
+/* set FontAwesome icon colour to tint color */
+i.fa-solid, i.fa-regular {
+  color: var(--tint-color);
+}
 
+.closeButton {
+	font-size: unset;
+  background-color: transparent;
+  border: none;
+  box-shadow: none;
+  margin-right: 5px;
+  outline: none;
+}
+.skip-button {
+	font-size: unset;
+  background-color: transparent;
+  border: none;
+  /* outline: none; -- requested by DBW but not good for accessibility? */
+  box-shadow: none;
+  margin-right: 0px;
+}
+
+.interactive-processing-status {
+  margin-right: 5px;
+  margin-top: 2px;
+}
 
 
 /* iOS devices require an override for font size, otherwise it does a nasty zoom in effect 
@@ -156,28 +180,9 @@ dialog {
   }
 }
 
-/* set fa icon colour to tint color */
-i.fa-solid, i.fa-regular {
-  color: var(--tint-color);
-}
-
-.closeButton {
-	font-size: unset;
-  background-color: none;
-  border: none;
-  box-shadow: none;
-  margin-right: 5px;
-  outline: none;
-}
-.skip-button {
-	font-size: unset;
-  background-color: none;
-  border: none;
-  box-shadow: none;
-  margin-right: 0px;
-}
-
-.interactive-processing-status {
-  margin-right: 5px;
-  margin-top: 2px;
-}
+/* @media screen and (width <= 420px) {
+  dialog:modal {
+    max-width: 90%;
+    left: 5%;
+  }
+} */
